--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ permalink: /404.html
 
 Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" style="width: 400px; display:block; margin: 0 auto;"/>]({{ site.baseurl }}/)
+[<img src="{{ site.baseurl }}/assets/images/404.jpg" style="width: 400px; display:block; margin: 0 auto;"/>]({{ site.baseurl }}/)
